translation-tool/inputs/source_meta/objects/Order_Limit_Config__c.object
<CustomObject>
    <fields>
        <fullName>Allowed_Orders_Limit__c</fullName>
        <label>Allowed Orders Limit</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Unlimited</fullName>
                </value>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Country</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Document_Number__c</fullName>
        <label>Document Number</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Type__c</fullName>
        <label>Document Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Country__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Citizenship Card</fullName>
                </value>
                <value>
                    <fullName>Foreigner ID</fullName>
                </value>
                <value>
                    <fullName>Tax Identification Number (NIT)</fullName>
                </value>
                <value>
                    <fullName>Peru National Identity Document (DNI)</fullName>
                </value>
                <value>
                    <fullName>Peru Foreigner ID (CE)</fullName>
                </value>
                <value>
                    <fullName>Peru Tax Identification Number (RUC)</fullName>
                </value>
                <value>
                    <fullName>Chilean Identity Card (RUN)</fullName>
                </value>
                <value>
                    <fullName>Chilean Tax Identification Number (RUT)</fullName>
                </value>
                <value>
                    <fullName>Ecuador Citizenship Card</fullName>
                </value>
                <value>
                    <fullName>Ecuador Foreigner Id</fullName>
                </value>
                <value>
                    <fullName>Ecuador Tax Identification Number (RUC) Persona Juridica</fullName>
                </value>
                <value>
                    <fullName>Ecuador Tax Identification Number (RUC) Persona Natural</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Order Limit Config</label>
    <nameField>
        <displayFormat>OLC({00000000})</displayFormat>
        <label>Order Limit Config Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Limit Configs</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>